@@ -86,6 +86,7 @@
                                             </td>
                                             <td>
                                                 <input type="{if ConfigHelper::checkPrivilege('hide_voip_passwords')}password{else}text{/if}" name="voipaccountedit[passwd]" value="{$voipaccountinfo.passwd}" {tip text="Enter password" trigger="passwd"}>
+                                                <a href="#" id="genpasswd"  {tip text="Click to generate random password"}>&raquo;&raquo;&raquo;</a>
                                             </td>
                                         </tr>
                                         {/block}
@@ -285,8 +286,8 @@
     </table>
 </form>
 
-<script type="text/javascript">
-<!--
+<script>
+
     var remove_number      = '{$remove_number}';
     var pool_number_select = '{$pool_number_select}';
     var customer_addresses = new LmsUiIconSelectMenu( "#customer_addresses" );
@@ -326,6 +327,15 @@
                 });
             }
         });
+
+        $("#genpasswd").click(function() {
+            var length = {ConfigHelper::getConfig('phpui.voipaccount_password_length', '16')};
+            if (length > 32) length = 32;
+
+            $('[name="voipaccountedit[passwd]"]').val(
+                generate_random_string(length, "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789")
+            );
+        });
     });
 
     /*!
@@ -346,5 +356,5 @@
 
         customer_addresses.init();
     });
-//-->
+
 </script>
