@@ -24,6 +24,7 @@ version 26-git (????-??-??):
     and different background color [chilan]
   - improvement: use native color selector input element for helpdesk ticket category look
     definition [chilan]
+  - improvement: voip account password generation link near password form field [chilan]
 
 version 25.0 (2020-05-15):
 
